--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Monster Dojo - Iniciar Sesión</title>
+    <title>Monster Dojo - Registrarse</title>
     <link rel="stylesheet" href="..\static\css\userforms.css">
     <script src="https://kit.fontawesome.com/9c32bf538b.js" crossorigin="anonymous"></script>
 </head>
@@ -48,19 +48,26 @@
     <div class="container">
         <div class="form-container">
             <form>
-                <h3>Iniciar Sesión</h3>
+                <h3>Crear una cuenta</h3>
                 <div class="input-container">
                     <label for="email">Correo Electrónico</label>
                     <input type="email" id="email" name="email" required>
                 </div>
                 <div class="input-container">
-                    <label for="password">Contraseña</label>
-                    <input type="password" id="password" name="password" required>
-                    <span>¿Olvidaste tu contraseña? <a href="reset-password.html">Recupérala</a></span>
+                    <label for="name">Nombre</label>
+                    <input type="text" id="name" name="name" required>
                 </div>
                 <div class="input-container">
-                    <button type="submit">Iniciar Sesión</button>
-                    <span>¿No tienes una cuenta? <a href="register.html">Regístrate</a></span>
+                    <label for="password">Contraseña</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <div class="input-container">
+                    <label for="confirm-password">Verificar Contraseña</label>
+                    <input type="password" id="confirm-password" name="confirm-password" required>
+                </div>
+                <div class="input-container">
+                    <button type="submit">Registrarse</button>
+                    <span>¿Ya tienes una cuenta? <a href="login.html">Inicia sesión</a></span>
                 </div> 
             </form>
         </div>
