--- a/templates/reset-password.html
+++ b/templates/reset-password.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Monster Dojo - Iniciar Sesión</title>
+    <title>Monster Dojo - Recuperar Contraseña</title>
     <link rel="stylesheet" href="..\static\css\userforms.css">
     <script src="https://kit.fontawesome.com/9c32bf538b.js" crossorigin="anonymous"></script>
 </head>
@@ -48,19 +48,14 @@
     <div class="container">
         <div class="form-container">
             <form>
-                <h3>Iniciar Sesión</h3>
+                <h3>Recuperar Contraseña</h3>
+                <p>Ingresa tu correo electronico y enviaremos un enlace en el que podras recuperar tu contraseña</p>
                 <div class="input-container">
                     <label for="email">Correo Electrónico</label>
                     <input type="email" id="email" name="email" required>
                 </div>
                 <div class="input-container">
-                    <label for="password">Contraseña</label>
-                    <input type="password" id="password" name="password" required>
-                    <span>¿Olvidaste tu contraseña? <a href="reset-password.html">Recupérala</a></span>
-                </div>
-                <div class="input-container">
-                    <button type="submit">Iniciar Sesión</button>
-                    <span>¿No tienes una cuenta? <a href="register.html">Regístrate</a></span>
+                    <button type="submit">Recuperar Contraseña</button>
                 </div> 
             </form>
         </div>
