funcionalidad y seguridad registro/login

--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -13,9 +13,9 @@
         <img class="head-logo" src="..\static\images\logo.png" alt="Monster Dojo">
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="login.html">Iniciar Sesión</a></li>
-                <li><a href="register.html">Registrarse</a></li>
+                <li><a href="/">Inicio</a></li>
+                <li><a href="/login">Iniciar Sesión</a></li>
+                <li><a href="/register">Registrarse</a></li>
             </ul>
         </nav>
         <div class="header-content">
@@ -47,18 +47,15 @@
     </header>
     <div class="container">
         <div class="form-container">
-            <form>
-                <h3>Recuperar Contraseña</h3>
+            <h3>Recuperar Contraseña</h3>
+            <form method="POST" action="/reset_password">
+                <p>Ingresa tu correo electrónico</p>
                 <div class="input-container">
-                    <label for="new-pass">Nueva contraseña</label>
-                    <input type="password" id="new-pass" name="new-password" required>
+                    <label for="email">Correo Electrónico</label>
+                    <input type="email" id="email" name="email" required>
                 </div>
                 <div class="input-container">
-                    <label for="confirm-pass">Confirmar contraseña</label>
-                    <input type="password" id="confirm-pass" name="confirm-password" required>
-                </div>
-                <div class="input-container">
-                    <button type="submit">Guardar Cambios</button>
+                    <button type="submit">Recuperar Contraseña</button>
                 </div> 
             </form>
         </div>
