--- a/templates/login.html
+++ b/templates/login.html
@@ -13,9 +13,9 @@
         <img class="head-logo" src="..\static\images\logo.png" alt="Monster Dojo">
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="login.html">Iniciar Sesión</a></li>
-                <li><a href="register.html">Registrarse</a></li>
+                <li><a href="/">Inicio</a></li>
+                <li><a href="/login">Iniciar Sesión</a></li>
+                <li><a href="/register">Registrarse</a></li>
             </ul>
         </nav>
         <div class="header-content">
@@ -47,24 +47,53 @@
     </header>
     <div class="container">
         <div class="form-container">
-            <form>
+            <form action="/login" method="POST">
                 <h3>Iniciar Sesión</h3>
                 <div class="input-container">
                     <label for="email">Correo Electrónico</label>
                     <input type="email" id="email" name="email" required>
+                    
                 </div>
                 <div class="input-container">
                     <label for="password">Contraseña</label>
                     <input type="password" id="password" name="password" required>
-                    <span>¿Olvidaste tu contraseña? <a href="reset-password.html">Recupérala</a></span>
+                    {% if login_attempts > 0 %}
+                    <div class= "error-message">Correo electrónico o contraseña incorrectos.</div>
+                    {% endif %}
+                    <span>¿Olvidaste tu contraseña? <a href="/reset_password">Recupérala</a></span>
                 </div>
                 <div class="input-container">
                     <button type="submit">Iniciar Sesión</button>
-                    <span>¿No tienes una cuenta? <a href="register.html">Regístrate</a></span>
-                </div> 
+                    <span>¿No tienes una cuenta? <a href="/register">Regístrate</a></span>
+                </div>
+                <div class="input-container">
+                    <a href="{{ url_for('login_google') }}" class="google-btn">Iniciar sesión con Google</a>
+                </div>
+                
             </form>
         </div>
     </div>
 </body>
-
+<style>
+    .error-message {
+    color: red;
+    font-size: 0.8em;
+    visibility: visible; /* Asegúrate de que los mensajes sean visibles */
+    height: auto; /* Si estaban ocultos por problemas de altura */
+}
+    .google-btn {
+        display: inline-block;
+        background-color: #db4437;
+        color: white;
+        border-radius: 4px;
+        padding: 10px 15px;
+        margin-top: 10px;
+        text-align: center;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    .google-btn:hover {
+        background-color: #c23321;
+    }
+</style>
 </html>
