Nuevo navbar, vista de admin

--- a/templates/new_password.html
+++ b/templates/new_password.html
@@ -9,42 +9,22 @@
 </head>
 
 <body>
-    <header>
-        <img class="head-logo" src="..\static\images\logo.png" alt="Monster Dojo">
-        <nav class="navbar">
-            <ul>
-                <li><a href="/">Inicio</a></li>
-                <li><a href="/login">Iniciar Sesión</a></li>
-                <li><a href="/register">Registrarse</a></li>
-            </ul>
-        </nav>
-        <div class="header-content">
-            <div class="rating-closing">
-                <button>
-                    <i class="fas fa-star"></i>
-                    <span>4.5</span>
-                </button>
-                <button>
-                    <i class="fas fa-clock"></i>
-                    <span>Abierto</span>
-                </button>
-            </div>
-            <div class="socials">
-                <a href="" target="_blank">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="" target="_blank">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="" target="_blank">
-                    <i class="fa-brands fa-whatsapp"></i>
-                </a>
-                <a href="" target="_blank">
-                    <i class="fa-brands fa-tiktok"></i>
-                </a>
-            </div>
+    <nav class="navbar">
+        <div class="nav-logo">
+            <img src="../static/images/logo.png" alt="Monster Dojo">
         </div>
-    </header>
+        <ul class="nav-items">
+            <li><a href="">Inicio</a></li>
+            <li><a href="">Usuarios</a></li>
+            <li><a href="">Juegos</a></li>
+            <li><a href="">Comida</a></li>
+            <li><a href="">Mesas</a></li>
+            <li><a href="">Reservas</a></li>
+            <li><a href="">Pedidos</a></li>
+            <li><a href="">Empleados</a></li>
+            <li><a href="">Cerrar Sesion</a></li>
+        </ul>
+    </nav>
     <div class="container">
         <div class="form-container">
             <form action="/new_password" method="POST" id="change-password-form">
