--- a/static/css/userforms.css
+++ b/static/css/userforms.css
@@ -25,23 +25,61 @@ body{
     background-repeat: no-repeat;
 }
 
-header{
+.navbar {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    background: var(--dark-color);
+    background: var(--primary-color);
     padding: 20px;
 }
 
-.head-logo{
+.nav-logo {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 120px;
-    width: 120px;
+    height: 100px;
+    width: 100px;
+    margin-right: 20px;
+    background-color: #FAF7E6;
+    border: solid #FAF7E6 3px;
+    border-radius: 50%;
 }
+
+.nav-logo img {
+    height: 100%;
+    width: 100%;
+}
+
+.nav-items {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 10px;
+}
+
+.nav-items li {
+    list-style: none;
+    margin-right: 20px;
+    transition: all 0.3s;
+}
+
+.nav-items li a {
+    text-decoration: none;
+    color: var(--light-color);
+    font-size: 1.2rem;
+    transition: all 0.3s ease-in-out;
+}
+
+.nav-items li a:hover {
+    color: var(--alt-primary-color);
+}
+
+.nav-items li:hover {
+    transform: scale(1.3);
+}
+
 
 .container{
     width: 100%;
@@ -205,31 +243,3 @@ header{
     color: var(--dark-color);
     border: 3px solid var(--dark-color);
 }
-
-.navbar{
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 15px;
-}
-
-.navbar ul{
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-}
-
-.navbar a{
-    text-decoration: none;
-    color: var(--light-color);
-    font-size: 20px;
-    transition: 0.3s;
-}
-
-.navbar a:hover{
-    color: var(--alt-secondary-color);
-}
-
